[metadata]
name = syncio
version = attr: syncio.__version__
description = asyncio, without await
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = David Brochart
author_email = david.brochart@gmail.com
platforms = Windows, Linux, Mac OS X
keywords = asyncio

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  nest-asyncio
